test: branch spliting for experiments